# Huffman_encoding_decoding_cpp

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hw-02_huffman  hw-02_huffman_test
_build/: CMakeCache.txt  Makefile  cmake_install.cmake  hw-02_huffman  hw-02_huffman_test
include/: bin_manip.h  huffman_archiver.h  huffman_constants.h  huffman_tree.h  huffman_tree_node.h
samples/: test_operator<<.txt
src/: huffman_archiver.cpp  huffman_tree.cpp  huffman_tree_node.cpp  main.cpp
test/: test.cpp
